global_tests: do not install contract set and endorsement process related modules (#2363)
Fix #10308

--- a/modules/global_tests/doc/fr/CHANGELOG
+++ b/modules/global_tests/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10308 Ne pas installer les modules liés aux ensembles de contrats et aux processus d'avenant
 * FEA#10145 Utilisation de psycopg2 pour les opérations liées à la base de données
 
 Version 2.2 - 2018-10-12
