--- a/modules/global_tests/doc/en/CHANGELOG
+++ b/modules/global_tests/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10308 Do not install contract set and endorsement process related modules
 * FEA#10145 Use psycopg2 for database operations
 
 Version 2.2 - 2018-10-12
