claim_pasrau: Include party modifications in dsn (#2366)
Fix #10343

--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10343 Gestion des modifications d'état civil
 * FEA#10293 Gestion de l'identifiant métier de taux pasrau et création d'objets taux pasrau liés aux lignes de mouvement
 * FEA#10156 Gestion des bordereaux de type pasrau
 
