--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Improve pasrau file import wizard and batch 
 * FEA#10343 Include party modifications in pasrau dsn
 * FEA#10293 Handle pasrau rate business id and create a pasrau rate object linked to move lines
 * FEA#10156 Handle pasrau slips
