--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -47,6 +47,14 @@ msgstr ""
 "La date manuelle de début %(manual_start_date)s de l'option %(option)s est "
 "antérieure à la date d'effet initial %(start_date)s du contrat %(contract)s"
 
+msgctxt "error:contract.option:"
+msgid ""
+"The computed end date for option %(option)s is less than its start date, "
+"it will be automatically declined"
+msgstr ""
+"La garantie %(option)s a une date de fin antérieure à sa date de début, elle "
+"sera automatiquement déclinée"
+
 msgctxt "error:contract.reactivate:"
 msgid "No contract found"
 msgstr "Pas de contrat trouvé"
