--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10316 Block subscription of options with an end date smaller than its start date
 * BUG#10242 Reset terminated options manual end date when terminating contracts
 
 Version 2.2 - 2018-10-12
