rule_engine: Only update rule parameters on the right rule (#2336)
Fix #10287

--- a/modules/rule_engine/doc/en/CHANGELOG
+++ b/modules/rule_engine/doc/en/CHANGELOG
@@ -1,4 +1,5 @@
-* BUG#10221 Fix formatting of erros
+* BUG#10287 Update rule parameters only if they match the modified rule
+* BUG#10221 Fix formatting of errors
 
 Version 2.2 - 2018-10-12
 * FEA#9323 Add code linter to rule engine
