--- a/modules/rule_engine/doc/fr/CHANGELOG
+++ b/modules/rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10287 Mise à jour des paramètres de règles en fonction de la règle sélectionnée
 * BUG#10221 Correction du formattage des erreurs
 
 Version 2.2 - 2018-10-12
