--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,5 +1,6 @@
-* BUG#10215 Fix display and requireness issues of annuity frequency field 
-* BUG#10198 Fix automatic rules input when only one rule is available 
+* BUG#10285 Properly clear cache when modifying benefits on group contracts
+* BUG#10215 Fix display and requireness issues of annuity frequency field
+* BUG#10198 Fix automatic rules input when only one rule is available
 
 Version 2.2 - 2018-10-12
 * FEA#9102 Improve benefit configuration display on group contract
