--- a/modules/claim_indemnification_group/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10285 Nettoyage du cache lors des modifications de prestations sur un contrat collectif
 * BUG#10215 Correctif sur les problèmes d'affichage et champ requis concernant la fréquence d'indemnisation
 * BUG#10198 Correctif sur la saisie automatique des règles de prestation lorsqu'un seul choix est disponible
 
