claim_life: Fix claim beneficiary documents reception date (#2370)
Fix #10353

--- a/modules/claim_life/doc/en/CHANGELOG
+++ b/modules/claim_life/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10353 Fix claim beneficiary documents reception date
 * BUG#10280 Fix an inifinite loop when defining extra data on benefits
 * BUG#10172 Adding of the data 'person' on the rule engine context in order to calculate the birthday of the covered element
 * BUG#10072 Allow to delete beneficiaries from a claim
