account_invoice_slip: Fix crash when launching slip without slip configuration (#2362)
Fix #10337

--- a/modules/account_invoice_slip/doc/en/CHANGELOG
+++ b/modules/account_invoice_slip/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10337 Fix crash when launching slip generation without slip configuration from the application
 * OTH#000 Fix relate on slip for related lines display
 * FEA#10156 Allow import/export for invoice slip configuration
 * OTH#0000 Use list instead of generator in select invoices request
