--- a/modules/claim_prest_ij_service/doc/fr/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10393: Amélioration de l'affichage des tâches BPIJ avec possibilités de filtrer par Société/Assurés
+
 Version 2.2 - 2018-10-12
 * BUG#9730 Anonymisation du ssn dans les inscriptions lorsqu'on anonymise un tiers
 * BUG#9761: Ajout des montants des noeuds Indu dans le calcul de la validation des montants
