--- a/modules/claim_pasrau/locale/fr.po
+++ b/modules/claim_pasrau/locale/fr.po
@@ -43,12 +43,8 @@ msgstr ""
 "défaut"
 
 msgctxt "error:party.pasrau.rate:"
-msgid "No NIR provided"
-msgstr "NIR manquant"
-
-msgctxt "error:party.pasrau.rate:"
-msgid "No party found for NIR %(ssn)s"
-msgstr "Aucun tiers rattaché au NIR %(ssn)s"
+msgid "No party found for NIR %(ssn)s and matricule %(matricule)s"
+msgstr "Aucun tiers rattaché au NIR %(ssn)s et le matricule %(ssn)s"
 
 msgctxt "error:party.pasrau.rate:"
 msgid "No pasrau rate found for NIR %(ssn)s"
