claim_salary_fr: Remove accent on "indemnification" of revaluation frequency parameter (#2378)
Fix #10392

--- a/modules/claim_salary_fr/doc/fr/CHANGELOG
+++ b/modules/claim_salary_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10392 Suppression de l'accent sur indemnisation dans les valeurs de fréquence de revalorisation
 * BUG#10083 Suppression de la colonne (non alimentée) "Primes nettes"
 
 Version 2.2 - 2018-10-12
