--- a/modules/claim_salary_fr/locale/fr.po
+++ b/modules/claim_salary_fr/locale/fr.po
@@ -553,10 +553,10 @@ msgctxt ""
 "model:rule_engine.rule_parameter,selection:2_date_de_reference_regle_standard_de_calcul_de_la_revalorisation"
 msgid ""
 "DAT: Date d'arrêt de travail\n"
-"DEI: Date d'effet d'indémnisation"
+"DEI: Date d'effet d'indemnisation"
 msgstr ""
 "DAT: Date d'arrêt de travail\n"
-"DEI: Date d'effet d'indémnisation"
+"DEI: Date d'effet d'indemnisation"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,selection:3_1ere_revalorisation_regle_standard_de_calcul_de_la_revalorisation"
