migrator_contract_group: Small fixes (#2377)
Fix #00000

--- a/modules/migrator_contract_group/doc/fr/CHANGELOG
+++ b/modules/migrator_contract_group/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
 * OTH#00000 Divers correctifs (itération)
 * OTH#00000 Divers correctifs (itération)
+* OTH#00000 Divers correctifs (itération)
 * FEA#00000 Création du module
