--- a/modules/migrator_contract_group/doc/en/CHANGELOG
+++ b/modules/migrator_contract_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
 * OTH#00000 Various fixes (iteration)
 * OTH#00000 Various fixes (iteration)
+* OTH#00000 Various fixes (iteration)
 * FEA#00000 Module creation
