claim_eligibility: Fix crash of deductible end date computation using eligibility datas (#2361)
Fix #10335

--- a/modules/claim_eligibility/doc/en/CHANGELOG
+++ b/modules/claim_eligibility/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10335 Fix deductible end date computation when using eligibility datas
 * BUG#10247 Fix default eligibility decision when no eligibility rule is set
 
 Version 2.2 - 2018-10-12
