claim_salary_fr: Remove regression of fiekd net_salary_bonus (#2382)
Fix #10396

--- a/modules/claim_salary_fr/locale/fr.po
+++ b/modules/claim_salary_fr/locale/fr.po
@@ -182,6 +182,10 @@ msgctxt "field:claim.salary,net_salary:"
 msgid "Net Salary"
 msgstr "Salaire net"
 
+msgctxt "field:claim.salary,net_salary:"
+msgid "Net Salary Bonus"
+msgstr "Prime (nette)"
+
 msgctxt "field:claim.salary,rec_name:"
 msgid "Record Name"
 msgstr "Nom"
