--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10396 Regression of field net_salary_bonus
 * BUG#10392 Remove accent on "indemnification" in revaluation frquency values
 * BUG#10083 Remove unused "Net bonuses" column
 
