--- a/modules/claim_salary_fr/doc/fr/CHANGELOG
+++ b/modules/claim_salary_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10396 Rajout du champ net_salary_bonus
 * BUG#10392 Suppression de l'accent sur indemnisation dans les valeurs de fréquence de revalorisation
 * BUG#10083 Suppression de la colonne (non alimentée) "Primes nettes"
 
