--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Correction d'un crash lorsque l'on génère un message Pasrau sur un bordereau sans prélèvement
 * FEA#10394 Gérer le matricule avec le code de l'assuré dans les fichier pasrau
 * OTH#0000 Amélioration de l'assistant et du batch d'intégration des fichiers pasrau
 * FEA#10343 Gestion des modifications d'état civil
