claim_prest_ij_service: Fix crash in task view if prest ij task are present (#2390)
Fix #10443

--- a/modules/claim_prest_ij_service/doc/fr/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10443: Correction d'un crash lors de l'ouverture de la vue des tâches lorsque des tâches prestij sont présentes
 * FEA#10393: Amélioration de l'affichage des tâches BPIJ avec possibilités de filtrer par Société/Assurés
 
 Version 2.2 - 2018-10-12
