--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10443: Fix crash in task view if prest ij task are present
 * FEA#10393: Improve task display and allow to search according legal entity name or 
 
 Version 2.2 - 2018-10-12
