--- a/modules/account_payment_sepa_contract/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_contract/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10116 Mettre le statut d'un nouveau paiement à brouillon si aucun mandat n'est trouvé
+
 Version 2.2 - 2018-10-12
 * BUG#10133 Fix crash on contract subscription process when the mandate identification is not set
 * BUG#9635 Initialization of the payer and the direct debit account at contract subscription
