--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10442: An error is raised when generating a pasrau message is generated after the 10 of the month. However the error must be raised only the 10th of the month after the pasrau slip invoice date
 * OTH#0000 Fix crash when generating empty pasrau message on no line pasrau slip
 * FEA#10394 handle matricule with party code in pasrau file
 * OTH#0000 Improve pasrau file import wizard and batch 
