--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10442: Une erreur est levée lorsque l'on génère un message pasrau si le 10 du mois est passé, indépendamment de la date de facturation du bordereau. Cependant cette erreur ne doit être levée que si la date du jour est postérieure au 10 du mois suivant la date de facturation du bordereau Pasrau.
 * OTH#0000 Correction d'un crash lorsque l'on génère un message Pasrau sur un bordereau sans prélèvement
 * FEA#10394 Gérer le matricule avec le code de l'assuré dans les fichier pasrau
 * OTH#0000 Amélioration de l'assistant et du batch d'intégration des fichiers pasrau
