--- a/modules/contract_insurance_payment/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_payment/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10390 La date du passage en paiement manuel est mal positionnée pour les contrats faisant partie d'un ensemble de contrat (module contract_set), et dont les paiements sont rejetés en même temps.
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * FEA#8449 Déblocage des changements de mode de quittancement automatiques lorsque le contrat est dans le statut "résilié" ou "suspendu"
