--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -89,6 +89,10 @@ msgctxt "field:extra_data,name:"
 msgid "Code"
 msgstr "Code"
 
+msgctxt "field:extra_data,domain:"
+msgid "Domain"
+msgstr "Domaine"
+
 msgctxt "field:extra_data,parents:"
 msgid "Parents"
 msgstr "Parents"
@@ -896,6 +900,10 @@ msgstr "Mis à jour par"
 msgctxt "field:report.template-offered.product,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "help:extra_data,domain:"
+msgid "Example: [['my_code', '>=', 5], ['my_code', '<', 12]]"
+msgstr "Exemple: [['mon_code', '>=', 5], ['mon_code', '<', 12]]"
 
 msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
