claim_prest_ij_service: Add synthesis rec name to diplay party rec_name in task name (#2392)

--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000: Iteration on #10393: display all party information in task name
 * BUG#10443: Fix crash in task view if prest ij task are present
 * FEA#10393: Improve task display and allow to search according legal entity name or 
 
