claim_pasrau: Fix some Pasrau file data. (#2402)
Fix #10466

--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10466: Error in pasrau file data. Slip is generated the last day of the month: S21.G00.20.006 must be the first day of the month and S21.G00.20.007 the last day of the month. S21.G00.30.002 must be the birth name if defined else the name and S21.G00.30.003 must be the name if birth name defined else do not send it
 * BUG#10454: The amount displayed on indemnification is incorrect when a parsrau tax is applied and default pasrau rate is different between with and whithout tax amount. This generate an incorrect claim invoice.
 * BUG#10442: An error is raised when generating a pasrau message is generated after the 10 of the month. However the error must be raised only the 10th of the month after the pasrau slip invoice date
 * OTH#0000 Fix crash when generating empty pasrau message on no line pasrau slip
