--- a/modules/global_tests/doc/fr/CHANGELOG
+++ b/modules/global_tests/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Emettre le bordereau Pasrau et générer le message Pasrau. Ajout de la configuration PASRAU
 * FEA#10308 Ne pas installer les modules liés aux ensembles de contrats et aux processus d'avenant
 * FEA#10145 Utilisation de psycopg2 pour les opérations liées à la base de données
 
