claim_eligibility: set size to 1 for eligibility rules on benefit (#2407)
Fix #10422

--- a/modules/claim_eligibility/doc/en/CHANGELOG
+++ b/modules/claim_eligibility/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10422 Several eligibility rules can be added to a benefit but only the first is used
 * BUG#10335 Fix deductible end date computation when using eligibility datas
 * BUG#10247 Fix default eligibility decision when no eligibility rule is set
 
