party_cog: add depends on get_rec_name of address  (#2404)
Fix #10480

--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10480 Error when restarting an address change endorsement
+
 Version 2.2 - 2018-10-12
 * FEA#5633 Merge party_cog and country_address_configuration and enhance address form view
 * FEA#10057 Add phone and email on party textual synthesis
