--- a/modules/contract_insurance_suspension/doc/en/CHANGELOG
+++ b/modules/contract_insurance_suspension/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10046 Set end of temporary suspension to minimum between today and the calculated date
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * BUG#7582 Define _func_key as id data when exporting a contract suspension in JSON
