--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10522 It was not possible to configure an event type action to re-generate non periodic invoices
 * BUG#10116 Also copy contract link when copying an invoice
 * BUG#10223 Fix a case where invalid invoice periods could be computed
 * BUG#10168 Fix an edge case of get_invoice_periods which could lead to an infinite loop
