--- a/modules/claim_reporting/doc/en/CHANGELOG
+++ b/modules/claim_reporting/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10435 Enable using claim reporting without installing sometimes unnecessary commission related modules
+
 Version 2.2 - 2018-10-12
 * BUG#9290 Allow to print a claim service
 * BUG#9019 Fix from commit d5f56ad: wrong target on insurer claim_stock_reports Many2Many field
