coog_core: Make res user JSON exportable (fix) (#2426)
Fix #10577

--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10577 Fix on "User" model to make it JSON exportable
 * OTH#0000 Optimize memory usage of "stream" methods
 * BUG#10249 Use fast_invoice chain in default daily batch chain
 * BUG#10179 Propagate renaming and deletion of dict field keys
