--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10291 Allow to deliver the same benefit several times on the same claim
 * BUG#10120 Improve error message when setting an invalid declaration date
 
 Version 2.2 - 2018-10-12
