--- a/modules/claim/doc/fr/CHANGELOG
+++ b/modules/claim/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10291 Avoir la possibilité de délivrer une prestation plusieurs fois dans le même sinistre
 * BUG#10120 Amélioration du message d'erreur en cas de saisie d'une date de déclaration invalide
 
 Version 2.2 - 2018-10-12
