claim_salary_fr: Add specific field on delivered service to override salary mode (#2413) (#2423)
Fix #10532

--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10532 Add field on delivered service to override the salary mode per delivered service
 * BUG#10396 Regression of field net_salary_bonus
 * BUG#10392 Remove accent on "indemnification" in revaluation frquency values
 * BUG#10083 Remove unused "Net bonuses" column
