--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10284 Extend possible beneficiaries to allow parties higher in the covered element's tree and the contract subscriber
 * BUG#10424 The option benefit fields were not readonly on an active contract
 * BUG#10285 Properly clear cache when modifying benefits on group contracts
 * BUG#10215 Fix display and requireness issues of annuity frequency field
